update UI - add social icons on top - remove site avatar - fix share UI - add reading time on posts - fix top button alignment

--- a/style.scss
+++ b/style.scss
@@ -86,7 +86,7 @@ li {
 p {
   margin: 15px 5px 5px 7px;
   color: #FFF;
-  font-family: Lato,sans-serif;
+  font-family: 'Merriweather','Georgia', serif;
   word-spacing: 2.5px;
   word-wrap: break-word;
 }
